# pt2tfjs

./: .gitignore  Convert.ps1  README.md
onnx2tfjs/: Convert-Onnx2Tfjs.ps1  onnx2tfjs.py  pyproject.toml
pt2onnx/: Convert-Pt2Onnx.ps1  pyproject.toml  pyproject.toml.back
